Refactor triangulation components to integrate logging and improve rotation handling
- Added logging functionality to TriangulatePoints and TriangulateYoloPose classes for better debugging.
- Adjusted rotation speed and handling in GuiTriangulateComponent for smoother auto-rotation.
- Updated orthographic projection to align with OpenCV conventions.
- Enhanced comments for clarity and understanding of coordinate transformations.

--- a/init.yaml
+++ b/init.yaml
@@ -1,4 +1,5 @@
 version: 0.0.1
 folder_path: plugins/triangulate_points_plugin
 type: plugin
-requirements: []
+requirements: 
+  - https://github.com/AI-Driven-Highspeed-Development/Logger-Util.git
